# qdk-ec

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.ado/: publish.yaml
binar/: Cargo.toml
dense-oracle/: Cargo.toml
dense-oracle/src/: lib.rs
deq/: CHANGELOG.md  pyproject.toml
deq/deq/circuit/: deq.lark  model.py  transformer.py
deq/deq/circuit/emacs-deq/: .gitignore  Makefile  README.md  deq-mode-tests.el  deq-mode.el
deq/deq/circuit/vscode-deq/syntaxes/: deq.tmLanguage.json
deq/deq/cli/: jit.py
deq/deq/noise/: common.py
deq/deq/runtime/: __init__.py
deq/deq/spec/: canonical.py  common.py
deq/deq/transpiler/: compose_builder.py  jit_annotate.py  jit_library_builder.py  jit_noise_builder.py
deq/deq_decoder_abi/reference_plugin/tests/: header_sync.rs
deq/deq_runtime/: Cargo.toml  build.rs  deq_runtime.pyi
deq/deq_runtime/src/: coordinator.rs  python.rs
deq/deq_runtime/src/simulator/: common.rs  preselect_directives.rs  preselect_simulator.rs  stim_delays.rs  tableau_preselect_sampler.rs
deq/deq_visualizer/: package-lock.json
deq/documents/tutorial/: README.md
deq/documents/tutorial/chapters/: codes-multi-logical.md  codes-redundant-stabilizers.md  compose-gadgets.md  compose-repropagate.md  conditional-correction.md  debug-deq-program.md  language-basics.md  lattice-surgery.md  mako-parametrization.md  multi-port-gadgets.md  qdk-loss-simulation.md  readout-propagation.md
deq/documents/tutorial/examples/: .gitignore  snippet_utils.py
deq/documents/tutorial/examples/compose/: 01_flat_3idle.deq  02_compose_3idle.deq  03_nested_compose.deq  gen_compose_examples.py
deq/documents/tutorial/examples/compose-repropagate/: 01_teleport_logical.deq  gen_compose_repropagate.py
deq/documents/tutorial/examples/conditional-correction/: 00_teleportation_library.deq  01_teleport_repropagate.deq  02_teleport_compose_conditional.deq  03_teleport_program_conditional.deq  gen_conditional.py  teleport_timeline.py
deq/documents/tutorial/examples/debug/: gen_debug_examples.py
deq/documents/tutorial/scripts/: highlight-deq.mjs  highlight_deq.py
deq/tests/circuit/: test_annotate.py  test_deq.py  test_noise_injection.py
deq/tests/circuit/fixtures/: conditional_readout_flip.deq  example.deq  readout_compose.deq  trivial_surgery.deq
deq/tests/circuit/repetition_code/: exercise_readout_conditions.deq  repetition_code.deq  repetition_code_d3.deq  repetition_code_d5.deq
deq/tests/circuit/surface_code/: lattice_surgery_d3.deq  teleportation_d3.deq
deq/tests/cli/: jit_test.py  transpile_detectors_test.py
deq/tests/runtime/: test_sampler.py
deq/tests/spec/: canonical_test.py  library_equivalence_test.py  library_validator_test.py  program_validator_test.py
deq/tests/transpiler/: jit_annotate_test.py  jit_library_builder_test.py  jit_propagate_test.py  jit_transpiler_test.py  metachecks_test.py  mpp_test.py  test_compose_repropagate.py
(+99 files in other folders)
